--- a/app/src/main/res/layout/activity_sign_in2.xml
+++ b/app/src/main/res/layout/activity_sign_in2.xml
@@ -38,7 +38,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/prompt_password"
-                android:imeActionId="@+id/login"
+                android:imeActionId="@integer/abc_max_action_buttons"
                 android:imeActionLabel="@string/sign_in"
                 android:imeOptions="actionUnspecified"
                 android:inputType="textPassword"
