--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,11 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+
+    <!-- Just for the publication activity -->
+    <dimen name="view_margin">2dp</dimen>
+    <dimen name="publishing_activity_text_size">14sp</dimen>
+    <dimen name="view_group_margin">10dp</dimen>
+    <dimen name="left_of_sm_icon">17dp</dimen>
+    <dimen name="right_of_share_button">13dp</dimen>
 </resources>
