--- a/Gather/app/src/main/res/layout/activity_feature_list.xml
+++ b/Gather/app/src/main/res/layout/activity_feature_list.xml
@@ -178,18 +178,6 @@
             android:layout_marginTop="345dp"
             android:layout_marginRight="10dp"/>
 
-        <TextView
-            style="@style/Base.V21.Theme.AppCompat.Light.Dialog"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Send Message"
-            android:textColor="#FFFFFF"
-            android:id="@+id/textView8"
-            android:layout_gravity="left"
-            android:layout_marginTop="510dp"
-            android:layout_marginLeft="5dp"/>
-
         <ImageButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -239,6 +227,18 @@
             android:layout_marginBottom="@dimen/abc_action_bar_default_height_material"
             android:background="@drawable/feature_dm"
             android:alpha=".4"/>
+
+        <TextView
+            style="@style/Base.V21.Theme.AppCompat.Light.Dialog"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="Send Message"
+            android:textColor="#FFFFFF"
+            android:id="@+id/textView8"
+            android:layout_gravity="left|bottom"
+            android:layout_marginTop="510dp"
+            android:layout_marginLeft="5dp"/>
 
     </FrameLayout>
 
