--- a/app/src/main/res/layout/song_list_item.xml
+++ b/app/src/main/res/layout/song_list_item.xml
@@ -16,7 +16,7 @@
             android:id="@+id/albumCoverImage"
             android:src="@drawable/abc_btn_check_to_on_mtrl_015"
             android:minHeight="50dp"
-            />
+            android:paddingLeft="8dp"/>
 
         <TextView
             android:layout_width="284dp"
@@ -25,7 +25,8 @@
             android:id="@+id/songInfoLabel"
             android:layout_gravity="center"
             android:singleLine="true"
-            android:textSize="16sp"/>
+            android:textSize="16sp"
+            android:paddingLeft="8dp"/>
 
     </LinearLayout>
 </RelativeLayout>
