--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -8,90 +8,97 @@
     android:id="@+id/signInActivity"
     android:background="#ff676767">
 
-    <ScrollView
-        android:id="@+id/scrollViewLogin"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_alignParentTop="false"
-        android:layout_alignParentRight="false"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="200dp"
-        android:layout_centerInParent="true">
-
-        <LinearLayout
-            android:id="@+id/linearLayoutLogin"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        >
+        <ScrollView
+            android:id="@+id/scrollViewLogin"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical" >
+            android:layout_alignParentTop="false"
+            android:layout_alignParentRight="false"
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
+            android:layout_centerInParent="true">
 
-            <AutoCompleteTextView
-                android:id="@+id/textFirstName"
+            <LinearLayout
+                android:id="@+id/linearLayoutLogin"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="First Name"
-                android:inputType="textPersonName"
-                android:maxLines="1"
-                android:singleLine="true" />
+                android:orientation="vertical" >
 
-            <AutoCompleteTextView
-                android:id="@+id/textLastName"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="Last Name"
-                android:inputType="textPersonName"
-                android:maxLines="1"
-                android:singleLine="true" />
+                <AutoCompleteTextView
+                    android:id="@+id/textFirstName"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="First Name"
+                    android:inputType="textPersonName"
+                    android:maxLines="1"
+                    android:singleLine="true" />
 
-            <AutoCompleteTextView
-                android:id="@+id/textUsernameLogin"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="Username (Email Address)"
-                android:inputType="textEmailAddress"
-                android:maxLines="1"
-                android:singleLine="true" />
+                <AutoCompleteTextView
+                    android:id="@+id/textLastName"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="Last Name"
+                    android:inputType="textPersonName"
+                    android:maxLines="1"
+                    android:singleLine="true" />
 
-            <AutoCompleteTextView
-                android:id="@+id/textPhoneNumber"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="Phone Number (optional)"
-                android:inputType="text|phone"
-                android:maxLines="1"
-                android:singleLine="true" />
+                <AutoCompleteTextView
+                    android:id="@+id/textUsernameLogin"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="Username (Email Address)"
+                    android:inputType="textEmailAddress"
+                    android:maxLines="1"
+                    android:singleLine="true" />
 
-            <EditText
-                android:id="@+id/textPasswordLogin"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/prompt_password"
-                android:imeActionId="@integer/abc_max_action_buttons"
-                android:imeActionLabel="@string/sign_in"
-                android:imeOptions="actionUnspecified"
-                android:inputType="textPassword"
-                android:maxLines="1"
-                android:singleLine="true" />
+                <AutoCompleteTextView
+                    android:id="@+id/textPhoneNumber"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="Phone Number (optional)"
+                    android:inputType="text|phone"
+                    android:maxLines="1"
+                    android:singleLine="true" />
 
-            <EditText
-                android:id="@+id/textPasswordVerify"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="Verify Password"
-                android:imeActionId="@integer/abc_max_action_buttons"
-                android:imeActionLabel="@string/sign_in"
-                android:imeOptions="actionUnspecified"
-                android:inputType="textPassword"
-                android:maxLines="1"
-                android:singleLine="true" />
+                <EditText
+                    android:id="@+id/textPasswordLogin"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/prompt_password"
+                    android:imeActionId="@integer/abc_max_action_buttons"
+                    android:imeActionLabel="@string/sign_in"
+                    android:imeOptions="actionUnspecified"
+                    android:inputType="textPassword"
+                    android:maxLines="1"
+                    android:singleLine="true" />
 
-            <Button
-                style="?android:textAppearanceMedium"
-                android:id="@+id/buttonSignUp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:text="@string/sign_in"
-                android:textStyle="bold" />
-        </LinearLayout>
-    </ScrollView>
+                <EditText
+                    android:id="@+id/textPasswordVerify"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="Verify Password"
+                    android:imeActionId="@integer/abc_max_action_buttons"
+                    android:imeActionLabel="@string/sign_in"
+                    android:imeOptions="actionUnspecified"
+                    android:inputType="textPassword"
+                    android:maxLines="1"
+                    android:singleLine="true" />
+
+                <Button
+                    style="?android:textAppearanceMedium"
+                    android:id="@+id/buttonSignUp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    android:text="@string/sign_in"
+                    android:textStyle="bold" />
+            </LinearLayout>
+        </ScrollView>
+    </RelativeLayout>
+
 </RelativeLayout>
