--- a/app/src/main/res/layout/activity_account_info.xml
+++ b/app/src/main/res/layout/activity_account_info.xml
@@ -1,35 +1,104 @@
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:minHeight="25px"
-    tools:context=".AccountInfoActivity">
+    android:layout_height="wrap_content"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    tools:context="cop_4331c.gather.AccoutInformationActivity"
+    android:id="@+id/accountInformationActivity"
+    android:background="#ff676767">
 
-    <FrameLayout
-        android:id="@+id/frameLayoutMain"
-        android:minWidth="25px"
-        android:minHeight="25px"
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <TextView android:id="@+id/text1"
+        <ScrollView
+            android:id="@+id/scrollViewLogin"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="You've Signed In!"
-            android:layout_width="fill_parent"
-            android:textColor="#000000"
-            android:textSize="32px"
-            android:gravity="center"
-            android:layout_marginTop="100px"/>
+            android:layout_alignParentTop="true"
+            android:layout_alignParentRight="false"
+            android:layout_alignParentEnd="true"
+            android:layout_marginTop="200dp">
+            <FrameLayout
+                android:id="@+id/frameLayoutMain"
+                android:minWidth="25px"
+                android:minHeight="25px"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true">
 
-        <TextView android:id="@+id/text2"
-            android:layout_height="wrap_content"
-            android:text="User Information"
-            android:layout_width="fill_parent"
-            android:textColor="#000000"
-            android:textSize="40px"
-            android:gravity="center"
-            android:layout_marginTop="130px"/>
-    </FrameLayout>
-</LinearLayout>
+                <EditText
+                    android:id="@+id/textFirstName"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="First Name"
+                    android:inputType="textPersonName"
+                    android:maxLines="1"
+                    android:singleLine="true" />
+
+                <EditText
+                    android:id="@+id/textLastName"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="Last Name"
+                    android:inputType="textPersonName"
+                    android:maxLines="1"
+                    android:singleLine="true" />
+
+                <EditText
+                    android:id="@+id/textUsernameLogin"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="Username (Email Address)"
+                    android:inputType="textEmailAddress"
+                    android:maxLines="1"
+                    android:singleLine="true" />
+
+                <EditText
+                    android:id="@+id/textPhoneNumber"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="Phone Number (optional)"
+                    android:inputType="text|phone"
+                    android:maxLines="1"
+                    android:singleLine="true" />
+
+                <EditText
+                    android:id="@+id/textPasswordLogin"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/prompt_password"
+                    android:imeActionId="@integer/abc_max_action_buttons"
+                    android:imeActionLabel="@string/sign_in"
+                    android:imeOptions="actionUnspecified"
+                    android:inputType="textPassword"
+                    android:maxLines="1"
+                    android:singleLine="true" />
+
+                <EditText
+                    android:id="@+id/textPasswordVerify"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="Verify Password"
+                    android:imeActionId="@integer/abc_max_action_buttons"
+                    android:imeActionLabel="@string/sign_in"
+                    android:imeOptions="actionUnspecified"
+                    android:inputType="textPassword"
+                    android:maxLines="1"
+                    android:singleLine="true" />
+
+                <Button
+                    android:layout_height="wrap_content"
+                    android:layout_width="match_parent"
+                    android:style="?android:textAppearanceMedium"
+                    android:id="@+id/buttonSaveChanges"
+                    android:layout_marginTop="16dp"
+                    android:text="@string/save_changes"
+                    android:textStyle="bold" />
+            </FrameLayout>
+        </ScrollView>
+    </RelativeLayout>
+</RelativeLayout>
