Integrated Feature List with Social Media Activity

--- a/app/src/main/res/layout/activitiy_publish_event.xml
+++ b/app/src/main/res/layout/activitiy_publish_event.xml
@@ -1,8 +1,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" android:paddingLeft="1dp"
-    android:paddingRight="1dp"
-    android:paddingTop="1dp"
+    android:paddingRight="1dp" android:paddingTop="1dp"
     android:paddingBottom="1dp" tools:context=".MainActivity"
     android:id="@+id/social_media_activity"
     android:orientation="vertical"
