--- a/app/src/main/res/layout/activity_account_info.xml
+++ b/app/src/main/res/layout/activity_account_info.xml
@@ -1,104 +1,102 @@
-<RelativeLayout
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="cop_4331c.gather.AccoutInformationActivity"
+    tools:context="cop_4331c.gather.AccountInformationActivity"
     android:id="@+id/accountInformationActivity"
-    android:background="#ff676767">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-    <RelativeLayout
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/new_username"
+        android:layout_marginTop="40dp"
+        android:text="@string/prompt_username"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:inputType="text"
+        android:layout_alignRight="@+id/new_phone"
+        android:layout_alignEnd="@+id/new_phone" />
+
+    <EditText
+        android:layout_width="150dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/new_password"
+        android:text="@string/prompt_password"
+        android:inputType="text"
+        android:layout_below="@+id/new_username"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="40dp" />
+
+    <EditText
+        android:layout_width="120dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/new_first_name"
+        android:text="@string/prompt_first_name"
+        android:inputType="text"
+        android:layout_below="@+id/editText"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="40dp" />
+
+    <EditText
+        android:layout_width="120dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/new_last_name"
+        android:text="@string/prompt_last_name"
+        android:layout_alignTop="@+id/new_first_name"
+        android:layout_toRightOf="@+id/new_password"
+        android:layout_toEndOf="@+id/new_password"
+        android:inputType="text" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="phone"
+        android:ems="10"
+        android:id="@+id/new_phone"
+        android:layout_marginTop="40dp"
+        android:text="@string/prompt_phone_number"
+        android:layout_below="@+id/new_first_name"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignRight="@+id/new_last_name"
+        android:layout_alignEnd="@+id/new_last_name" />
+
+    <Button
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:text="@string/go_back"
+        android:id="@+id/return_post_sign_in"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="40dp"
+        android:layout_alignRight="@+id/new_first_name"
+        android:layout_alignEnd="@+id/new_first_name"
+        android:onClick="goBack"/>
 
-        <ScrollView
-            android:id="@+id/scrollViewLogin"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentRight="false"
-            android:layout_alignParentEnd="true"
-            android:layout_marginTop="200dp">
-            <FrameLayout
-                android:id="@+id/frameLayoutMain"
-                android:minWidth="25px"
-                android:minHeight="25px"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentTop="true">
+    <EditText
+        android:layout_width="150dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/editText"
+        android:text="@string/prompt_password"
+        android:layout_marginTop="40dp"
+        android:inputType="text"
+        android:layout_below="@+id/new_password"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
-                <EditText
-                    android:id="@+id/textFirstName"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="First Name"
-                    android:inputType="textPersonName"
-                    android:maxLines="1"
-                    android:singleLine="true" />
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/save_changes"
+        android:id="@+id/buttonSaveChanges"
+        android:layout_alignTop="@+id/return_post_sign_in"
+        android:layout_alignLeft="@+id/new_last_name"
+        android:layout_alignStart="@+id/new_last_name" />
 
-                <EditText
-                    android:id="@+id/textLastName"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="Last Name"
-                    android:inputType="textPersonName"
-                    android:maxLines="1"
-                    android:singleLine="true" />
-
-                <EditText
-                    android:id="@+id/textUsernameLogin"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="Username (Email Address)"
-                    android:inputType="textEmailAddress"
-                    android:maxLines="1"
-                    android:singleLine="true" />
-
-                <EditText
-                    android:id="@+id/textPhoneNumber"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="Phone Number (optional)"
-                    android:inputType="text|phone"
-                    android:maxLines="1"
-                    android:singleLine="true" />
-
-                <EditText
-                    android:id="@+id/textPasswordLogin"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="@string/prompt_password"
-                    android:imeActionId="@integer/abc_max_action_buttons"
-                    android:imeActionLabel="@string/sign_in"
-                    android:imeOptions="actionUnspecified"
-                    android:inputType="textPassword"
-                    android:maxLines="1"
-                    android:singleLine="true" />
-
-                <EditText
-                    android:id="@+id/textPasswordVerify"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="Verify Password"
-                    android:imeActionId="@integer/abc_max_action_buttons"
-                    android:imeActionLabel="@string/sign_in"
-                    android:imeOptions="actionUnspecified"
-                    android:inputType="textPassword"
-                    android:maxLines="1"
-                    android:singleLine="true" />
-
-                <Button
-                    android:layout_height="wrap_content"
-                    android:layout_width="match_parent"
-                    android:style="?android:textAppearanceMedium"
-                    android:id="@+id/buttonSaveChanges"
-                    android:layout_marginTop="16dp"
-                    android:text="@string/save_changes"
-                    android:textStyle="bold" />
-            </FrameLayout>
-        </ScrollView>
-    </RelativeLayout>
 </RelativeLayout>
