--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -5,8 +5,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="cop_4331c.gather.SignInActivity"
-    android:id="@+id/signInActivity"
-    android:background="#ff676767">
+    android:id="@+id/signInActivity">
 
     <ScrollView
         android:id="@+id/scrollViewLogin"
@@ -28,7 +27,7 @@
                 android:id="@+id/textEmailLogin"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="@string/prompt_email"
+                android:hint="@string/prompt_username"
                 android:inputType="textEmailAddress"
                 android:maxLines="1"
                 android:singleLine="true" />
