--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -7,8 +7,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="cop_4331c.gather.SignInActivity"
-    android:id="@+id/signInActivity"
-    android:background="#ff676767">
+    android:id="@+id/signInActivity">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -35,7 +34,7 @@
                     android:id="@+id/textFirstName"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="First Name"
+                    android:hint= "@string/prompt_first_name"
                     android:inputType="textPersonName"
                     android:maxLines="1"
                     android:singleLine="true" />
@@ -44,7 +43,7 @@
                     android:id="@+id/textLastName"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="Last Name"
+                    android:hint="@string/prompt_last_name"
                     android:inputType="textPersonName"
                     android:maxLines="1"
                     android:singleLine="true" />
@@ -53,7 +52,7 @@
                     android:id="@+id/textUsernameLogin"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="Username (Email Address)"
+                    android:hint="@string/prompt_username"
                     android:inputType="textEmailAddress"
                     android:maxLines="1"
                     android:singleLine="true" />
@@ -62,7 +61,7 @@
                     android:id="@+id/textPhoneNumber"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="Phone Number (optional)"
+                    android:hint="@string/prompt_phone_number"
                     android:inputType="text|phone"
                     android:maxLines="1"
                     android:singleLine="true" />
@@ -83,7 +82,7 @@
                     android:id="@+id/textPasswordVerify"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="Verify Password"
+                    android:hint="@string/prompt_verify"
                     android:imeActionId="@integer/abc_max_action_buttons"
                     android:imeActionLabel="@string/sign_in"
                     android:imeOptions="actionUnspecified"
@@ -97,7 +96,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
-                    android:text="@string/sign_in"
+                    android:text="@string/sign_up"
                     android:textStyle="bold" />
             </LinearLayout>
         </ScrollView>
