--- a/app/src/main/res/layout/fragment_event.xml
+++ b/app/src/main/res/layout/fragment_event.xml
@@ -3,14 +3,22 @@
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_height="wrap_content"
     android:layout_width="match_parent"
-    android:layout_margin="5dp">
+    android:layout_margin="5dp"
+    android:orientation="vertical">
+
+    <Button
+        style="?android:textAppearanceMedium"
+        android:id="@+id/buttonNewEvent"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        android:text="@string/new_event"
+        android:textStyle="bold" />
 
     <ListView xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:layout_width="match_parent"
+        android:layout_width="fill_parent"
         android:layout_height="match_parent"
-        android:padding="16dp"
-        tools:context="cop_4331c.gather.SinchUsersActivity"
+        android:padding="5dp"
         android:theme="@style/Theme.AppCompat.NoActionBar"
         android:id="@+id/EventLayout">
     </ListView>
