--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,31 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_height="wrap_content"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_marginTop="10dp"
-    android:layout_marginBottom="10dp"
-    android:layout_marginLeft="10dp"
-    android:layout_marginRight="10dp">
+    android:layout_height="match_parent"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingBottom="@dimen/activity_vertical_margin" >
 
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageView4"
+        android:background="@drawable/avatar"
+        android:layout_alignParentTop="true"
+        android:layout_alignLeft="@+id/textPhoneNumberProfile"
+        android:layout_alignStart="@+id/textPhoneNumberProfile"
+        android:layout_marginTop="35dp" />
     <TextView
         android:id="@+id/textNameProfile"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:textColor="#ffcacaca"
-        android:textSize="24sp" />
+        android:textSize="30sp"
+        android:text="User Full Name"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true" />
     <TextView
         android:id="@+id/textUsernameProfile"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:textColor="#ffcacaca"
-        android:textSize="16sp" />
+        android:textSize="24sp"
+        android:text="Username"
+        android:layout_below="@+id/textNameProfile"
+        android:layout_centerHorizontal="true" />
     <TextView
         android:id="@+id/textPhoneNumberProfile"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:textColor="#ffcacaca"
-        android:textSize="16sp" />
-</LinearLayout>
+        android:textSize="24sp"
+        android:text="PhoneNumber"
+        android:layout_below="@+id/textUsernameProfile"
+        android:layout_centerHorizontal="true" />
+</RelativeLayout>
