--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -14,9 +14,8 @@
         android:id="@+id/imageView4"
         android:background="@drawable/avatar"
         android:layout_alignParentTop="true"
-        android:layout_alignLeft="@+id/textPhoneNumberProfile"
-        android:layout_alignStart="@+id/textPhoneNumberProfile"
-        android:layout_marginTop="35dp" />
+        android:layout_marginTop="35dp"
+        android:layout_centerHorizontal="true" />
     <TextView
         android:id="@+id/textNameProfile"
         android:layout_width="wrap_content"
