--- a/app/src/main/res/layout/activity_edit_playlists.xml
+++ b/app/src/main/res/layout/activity_edit_playlists.xml
@@ -59,9 +59,9 @@
             android:layout_height="wrap_content"
             android:text="Now Playling"
             android:background="#40ffffff"
-            android:id="@+id/button5"
+            android:id="@+id/homeTab"
             android:layout_weight="1"
-            android:backgroundTint="@android:color/holo_red_light"/>
+            />
 
         <Button
             android:layout_width="match_parent"
@@ -78,7 +78,7 @@
             android:background="#40ffffff"
             android:id="@+id/editPlaylistButton"
             android:layout_weight="1"
-            />
+            android:backgroundTint="@android:color/holo_red_light"/>
 
     </LinearLayout>
 
