--- a/app/src/main/res/layout/edit_song_item.xml
+++ b/app/src/main/res/layout/edit_song_item.xml
@@ -42,14 +42,15 @@
                 android:id="@+id/imageButton"
                 android:layout_weight="1"
                 android:src="@drawable/ic_keyboard_arrow_up_black_18dp"
-                />
+                android:background="@android:color/transparent"/>
 
             <ImageButton
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:id="@+id/imageButton2"
                 android:layout_weight="1"
-                android:src="@drawable/ic_keyboard_arrow_down_black_18dp"/>
+                android:src="@drawable/ic_keyboard_arrow_down_black_18dp"
+                android:background="@android:color/transparent"/>
         </LinearLayout>
 
     </LinearLayout>
