Bugfixes for account settings, features list, and Event list

--- a/app/src/main/res/layout/activity_name_event.xml
+++ b/app/src/main/res/layout/activity_name_event.xml
@@ -83,8 +83,8 @@
         android:id="@+id/submit_name"
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="20dp"
-        android:layout_centerHorizontal="true" />
-        <!--android:onClick="saveChanges" -->
+        android:layout_centerHorizontal="true"
+        android:onClick="saveChanges" />
 
     <Button
         style="?android:attr/buttonStyleSmall"
