--- a/app/src/main/res/layout/edit_song_item.xml
+++ b/app/src/main/res/layout/edit_song_item.xml
@@ -20,7 +20,7 @@
             />
 
         <TextView
-            android:layout_width="200dp"
+            android:layout_width="225dp"
             android:layout_height="wrap_content"
             android:text="How Much a Dollar Cost (feat. James Fauntleroy &amp; Ronald Isley)"
             android:id="@+id/songInfoLabel"
@@ -39,7 +39,7 @@
             <ImageButton
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:id="@+id/imageButton"
+                android:id="@+id/upButton"
                 android:layout_weight="1"
                 android:src="@drawable/ic_keyboard_arrow_up_black_18dp"
                 android:background="@android:color/transparent"/>
@@ -47,7 +47,16 @@
             <ImageButton
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:id="@+id/imageButton2"
+                android:id="@+id/deleteSongButton"
+                android:layout_weight="1"
+                android:background="@android:color/transparent"
+                android:src="@drawable/ic_delete_black_18dp"
+                android:focusableInTouchMode="false"/>
+
+            <ImageButton
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/downButton"
                 android:layout_weight="1"
                 android:src="@drawable/ic_keyboard_arrow_down_black_18dp"
                 android:background="@android:color/transparent"/>
