--- a/app/src/main/res/layout/activity_new_features_list.xml
+++ b/app/src/main/res/layout/activity_new_features_list.xml
@@ -62,7 +62,8 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_marginTop="80dp"
-        android:clickable="true" />
+        android:clickable="true"
+        android:onClick="sendInviteActivity" />
 
     <ImageButton
         android:layout_width="186dp"
